--- a/static/index.html
+++ b/static/index.html
@@ -2243,6 +2243,50 @@ return'<div style="padding:12px;background:var(--bg);border-radius:8px;margin-bo
 $('scheduledJobs').innerHTML=html
 }).catch(function(e){$('scheduledJobs').innerHTML='<p style="color:var(--error)">加载失败</p>'})}
 
+// ========== 审计日志 ==========
+function loadAuditLogs(){
+var event=$('auditEventFilter').value;
+var url='/api/audit/logs?days=30';
+if(event)url+='&event='+event;
+api(url).then(function(data){
+if(data.length===0){$('auditLogsList').innerHTML='<p style="color:var(--text2);text-align:center;padding:20px">暂无审计日志</p>';return}
+var html=data.map(function(log){
+var time=new Date(log.created_at).toLocaleString();
+var details=JSON.parse(log.details||'{}');
+var detailsStr=Object.keys(details).map(function(k){return k+': '+details[k]}).join(', ');
+return'<div style="padding:12px;background:var(--bg);border-radius:8px;margin-bottom:8px;border-left:4px solid var(--accent)"><div style="display:flex;justify-content:space-between;margin-bottom:4px"><span style="font-weight:500">'+log.action+'</span><span style="font-size:12px;color:var(--text2)">'+time+'</span></div><div style="font-size:13px;color:var(--text2)">用户: '+log.user_id+' | 资源: '+log.resource+'</div>'+(detailsStr?'<div style="font-size:12px;color:var(--text2);margin-top:4px">'+detailsStr+'</div>':'')+'</div>'
+}).join('');
+$('auditLogsList').innerHTML=html
+}).catch(function(e){$('auditLogsList').innerHTML='<p style="color:var(--error);text-align:center;padding:20px">加载失败: '+e.message+'</p>'})}
+
+function exportAuditLogs(){
+if(!confirm('确定导出审计日志？'))return;
+api('/api/audit/export',{method:'POST',body:JSON.stringify({days:30,format:'csv'})}).then(function(data){
+var blob=new Blob([data.content],{type:'text/csv'});
+var a=document.createElement('a');
+a.href=URL.createObjectURL(blob);
+a.download=data.filename;
+a.click();
+showToast('审计日志已导出')
+}).catch(function(e){alert('导出失败: '+e.message)})}
+
+function generateComplianceReport(period){
+api('/api/audit/report?period='+period).then(function(data){
+var html='<div style="padding:20px;background:var(--bg);border-radius:12px">';
+html+='<div style="display:flex;justify-content:space-between;margin-bottom:16px"><strong>'+period.toUpperCase()+' 合规报告</strong><span style="color:var(--text2)">'+data.generated_at.slice(0,16)+'</span></div>';
+html+='<div style="display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-bottom:16px">';
+html+='<div style="text-align:center"><div style="font-size:24px;font-weight:600;color:var(--accent)">'+Object.keys(data.event_summary).length+'</div><div style="font-size:12px;color:var(--text2)">事件类型</div></div>';
+html+='<div style="text-align:center"><div style="font-size:24px;font-weight:600;color:'+(data.security_alerts>0?'var(--error)':'var(--success)')+'">'+(data.security_alerts||0)+'</div><div style="font-size:12px;color:var(--text2)">安全警报</div></div>';
+html+='<div style="text-align:center"><div style="font-size:24px;font-weight:600;color:'+(data.compliance_status==='compliant'?'var(--success)':'var(--warning)')+'">'+(data.compliance_status||'N/A').toUpperCase()+'</div><div style="font-size:12px;color:var(--text2)">合规状态</div></div>';
+html+='</div>';
+html+='<div style="margin-top:16px"><strong>事件统计:</strong><div style="margin-top:8px">';
+for(var event in data.event_summary){
+html+='<div style="display:flex;justify-content:space-between;padding:4px 0"><span>'+event+'</span><span>'+data.event_summary[event]+'</span></div>'
+}
+html+='</div></div></div>';
+$('complianceReport').innerHTML=html
+}).catch(function(e){$('complianceReport').innerHTML='<p style="color:var(--error)">生成失败: '+e.message+'</p>'})}
+
 // ========== 安全中心 ==========
 function loadSecurityStatus(){
 api('/api/security/status').then(function(data){
