--- a/static/index.html
+++ b/static/index.html
@@ -186,7 +186,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;backgrou
 .mcp-server-card{background:var(--bg);border-radius:10px;padding:16px;transition:all .15s}
 .mcp-server-card:hover{background:var(--bg3)}
 .mcp-server-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
-.mcp-server-desc{font-size:12px;color:var(--text2);line-height:1.6;margin-bottom:12px;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.mcp-server-desc{font-size:12px;color:var(--text2);line-height:1.6;margin-bottom:12px;display:-webkit-box;-webkit-line-clamp:2;line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 .mcp-server-tags{display:flex;gap:6px;flex-wrap:wrap}
 .mcp-add-btn{width:24px;height:24px;display:flex;align-items:center;justify-content:center;background:var(--bg3);border-radius:6px;cursor:pointer;font-size:16px;color:var(--text2)}
 .mcp-add-btn:hover{background:var(--accent);color:#fff}
